test/files/neg/t6563.check
t6563.scala:4: error: not found: value e
    e("f")
    ^
one error found
